# vim-outdated-plugins

./: README.md  pyproject.toml
autoload/async/: job.vim
plugin/: vim-outdated-plugins.vim
python/: outdatedplugins.py
rplugin/python3/: outdatedplugins.py
