[tool.poetry]
name = "vim-outdated-plugins"
version = "0.1.0"
description = ""
authors = ["Randy West <randywest55@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
pynvim = "^0.4.3"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
